Revert "fix: Long text two lines + truncate (#3451)"
This reverts commit f9425ac3d6d04d9d45ec1a9371546a9e66bc9377.

--- a/src/app/shared/components/expenses-card-v2/expenses-card.component.scss
+++ b/src/app/shared/components/expenses-card-v2/expenses-card.component.scss
@@ -194,11 +194,10 @@
     font-size: 14px;
     font-weight: 500;
     line-height: 1.3;
-    display: -webkit-box;
-    -webkit-line-clamp: 8;
-    -webkit-box-orient: vertical;
+    white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    max-width: 70%;
     padding-right: 4px;
   }
 
