--- a/src/app/shared/components/reports-card/reports-card.component.scss
+++ b/src/app/shared/components/reports-card/reports-card.component.scss
@@ -91,10 +91,7 @@
     max-width: 90%;
     overflow: hidden;
     text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    line-height: 1.3;
-    -webkit-line-clamp: 8;
+    white-space: nowrap;
   }
 
   &--no-transactions {
